# ikdsplit

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: tests.yml
doc/: installation.md  release_notes.md  todo.md  usage.md
ikdsplit/: __init__.py  atoms.py  converter.py  filler.py  io.py  preparer.py  regressor.py  runner.py  sorter.py  spacegroup.py  splitter.py  utils.py
ikdsplit/database/: fetch_transformations_k.py  fetch_transformations_t.py  loss_of_centrings.csv  transformations_k.csv  transformations_t.csv
ikdsplit/database/wyckoff/: 001.csv  002.csv  003.csv  004.csv  005.csv  006.csv  008.csv  010.csv  011.csv  012.csv  013.csv  014.csv  015.csv  016.csv  017.csv  019.csv  020.csv  021.csv  022.csv  023.csv  024.csv  025.csv  026.csv  027.csv  028.csv  030.csv  031.csv  032.csv  035.csv  036.csv  037.csv  038.csv  039.csv  041.csv  042.csv  043.csv  044.csv  045.csv  046.csv  047.csv  (+175 more)
ikdsplit/database/wycksplit/: 002_001.toml  002_001.yaml  003_001.toml  003_001.yaml  004_001.toml  004_001.yaml  005_001.toml  005_001.yaml  006_001.toml  006_001.yaml  007_001.toml  007_001.yaml  008_001.toml  008_001.yaml  009_001.toml  009_001.yaml  010_002.toml  010_003.toml  010_006.toml  010_006.yaml  011_002.toml  011_004.toml  011_006.toml  012_002.toml  012_005.toml  012_008.toml  013_002.toml  013_003.toml  013_007.toml  014_002.toml  014_004.toml  014_007.toml  015_002.toml  015_005.toml  015_009.toml  063_011.toml  (+109 more)
tests/: test_crystal_class.py  test_fill.py  test_run.py  test_transformations.py  test_wicksplit.py  test_wyckoff.py
(+8 files in other folders)
