[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ikdsplit"
version = "0.1.0"
dependencies = [
    "ase",
    "spglib",
]
requires-python = ">=3.11"  # tomllib
authors = [
    {name = "Yuji Ikeda"},
]

[project.scripts]
ikdsplit = "ikdsplit.__init__:main"

[tool.setuptools.package-data]
"ikdsplit.database.wycksplit" = ["*.toml"]

[tool.ruff.lint]
select = ["ALL"]
